[project]
name = "mimo-bot"
version = "1.0.0"
description = "Telegram Bot bridge to MiMo Code Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=22.0",
    "SpeechRecognition>=3.10",
]

[project.scripts]
mimo-bot = "bot:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
